[tool.poetry]
name = "shopping-list"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "shopping_list"}]

[tool.poetry.dependencies]
python = "^3.10"
passlib = "^1.7.4"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
